--- a/matches.html
+++ b/matches.html
@@ -1,33 +1,37 @@
+<!-- matches.html -->
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>جدول المباريات</title>
+    <title>مباريات اليوم - تتبع كرة القدم</title>
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/matches.css">
-    <link rel="icon" href="assets/images/favicon.ico">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
     <header>
-        <img src="assets/images/logo.png" alt="شعار الموقع" class="logo">
+        <img src="assets/images/logo.png" alt="Logo" class="logo">
         <nav>
-            <a href="index.html">الرئيسية</a>
-            <a href="matches.html" class="active">المباريات</a>
-            <a href="news.html">الأخبار</a>
+            <ul>
+                <li><a href="index.html">الرئيسية</a></li>
+                <li><a href="matches.html" class="active">المباريات</a></li>
+                <li><a href="news.html">الأخبار</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
-        <section id="matches-list" class="matches-list">
-            <!-- سيتم ملء المباريات ديناميكياً من matches.js -->
-        </section>
+        <h1>مباريات اليوم</h1>
+        <div id="matches-container"></div>
     </main>
 
     <footer>
-        <p>&copy; 2025 جميع الحقوق محفوظة.</p>
+        <p>&copy; 2025 جميع الحقوق محفوظة</p>
     </footer>
 
-    <script src="assets/js/api.js"></script>
+    <script src="assets/js/main.js"></script>
     <script src="assets/js/matches.js"></script>
 </body>
 </html>
