--- a/matches.html
+++ b/matches.html
@@ -44,7 +44,9 @@
     </div>
   </footer>
 
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/matches.js"></script>
+  <script src="assets/js/api.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="assets/js/matches.js"></script>
+
 </body>
 </html>
