--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
     </footer>
 
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/api.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="assets/js/matches.js"></script>
+
 </body>
 </html>
