--- a/matches.html
+++ b/matches.html
@@ -45,8 +45,9 @@
     </footer>
 
     <!-- سكريبتات الجافاسكربت -->
-    <script src="assets/js/api.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/matches.js"></script>
+   <script src="assets/js/api.js" defer></script>
+<script src="assets/js/main.js" defer></script>
+<script src="assets/js/matches.js" defer></script>
+
 </body>
 </html>
