--- a/news.html
+++ b/news.html
@@ -28,9 +28,10 @@
         <p>&copy; 2025 جميع الحقوق محفوظة.</p>
     </footer>
 
-   <script src="assets/js/api.js"></script>
-<script src="assets/js/main.js"></script>
-<script src="assets/js/news.js"></script>
+  <script src="assets/js/api.js" defer></script>
+<script src="assets/js/main.js" defer></script>
+<script src="assets/js/matches.js" defer></script>
+
 
 
 </body>
