--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <p>تابع أهم الدوريات الأوروبية والعربية لحظة بلحظة!</p>
             <a href="matches.html" class="btn-primary">عرض المباريات</a>
         </section>
+        <div id="loader" class="loader"></div>
+
     </main>
 
     <footer>
