--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <p>&copy; 2025 جميع الحقوق محفوظة.</p>
     </footer>
 
-    <script src="assets/js/api.js"></script>
-<script src="assets/js/main.js"></script>
-<script src="assets/js/matches.js"></script>
+    <script src="assets/js/api.js" defer></script>
+<script src="assets/js/main.js" defer></script>
+<script src="assets/js/matches.js" defer></script>
 
 </body>
 </html>
