--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="assets/images/logo.png" alt="شعار الموقع" class="logo">
-        <nav>
+        <nav id="navMenu">
             <a href="index.html" class="active">الرئيسية</a>
             <a href="matches.html">المباريات</a>
             <a href="news.html">الأخبار</a>
@@ -30,10 +30,10 @@
     <footer>
         <p>&copy; 2025 جميع الحقوق محفوظة.</p>
     </footer>
+     <script src="assets/js/main.js" defer></script>
+     <script src="assets/js/api.js" defer></script>
+     <script src="assets/js/matches.js" defer></script>
 
-    <script src="assets/js/api.js" defer></script>
-<script src="assets/js/main.js" defer></script>
-<script src="assets/js/matches.js" defer></script>
 
 </body>
 </html>
