--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="assets/images/favicon.ico">
 </head>
 <body>
+    <button id="menuToggle">Toggle Menu</button> 
     <header>
         <img src="assets/images/logo.png" alt="شعار الموقع" class="logo">
         <nav id="navMenu">
