--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مباريات مباشرة</title>
     <link rel="stylesheet" href="assets/css/main.css">
+     <link rel="stylesheet" href="assets/css/matches.css">
     <link rel="icon" href="assets/images/favicon.ico">
 </head>
 <body>
