--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="icon" href="assets/images/favicon.ico">
 </head>
 <body>
-    <button id="menuToggle">Toggle Menu</button> 
     <header>
         <img src="assets/images/logo.png" alt="شعار الموقع" class="logo">
         <nav id="navMenu">
+            <button id="menuToggle">Toggle Menu</button> 
             <a href="index.html" class="active">الرئيسية</a>
             <a href="matches.html">المباريات</a>
             <a href="news.html">الأخبار</a>
@@ -25,6 +25,7 @@
             <p>تابع أهم الدوريات الأوروبية والعربية لحظة بلحظة!</p>
             <a href="matches.html" class="btn-primary">عرض المباريات</a>
         </section>
+        <div id="matches-container"></div>
         <div id="loader" class="loader"></div>
 
     </main>
