--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   };
 
   // استيراد الوحدات
-  import { FootballAPI } from './assets/js/api.js';
+  import { fetchMatches, fetchOdds } from './assets/js/api.js';
   import { MatchRenderer } from './assets/js/matches.js';
 
   // تحديث سنة حقوق النشر
