--- a/matches.html
+++ b/matches.html
@@ -16,6 +16,13 @@
             <img src="assets/images/logo.png" alt="شعار الموقع" />
             <h1>مباريات اليوم</h1>
         </div>
+        <button id="menuToggle">...</button>
+<nav id="navMenu">...</nav>
+<div id="mobile-menu">...</div>
+<nav class="nav">
+    <ul>...</ul>
+</nav>
+
         <nav class="nav">
             <ul>
                 <li><a href="index.html">الرئيسية</a></li>
@@ -45,9 +52,9 @@
     </footer>
 
     <!-- سكريبتات الجافاسكربت -->
-   <script src="assets/js/api.js" defer></script>
-<script src="assets/js/main.js" defer></script>
-<script src="assets/js/matches.js" defer></script>
+<script type="module" src="matches.js"></script>
+<script type="module" src="matches.js"></script>
+<script type="module" src="matches.js"></script>
 
 </body>
 </html>
