--- a/matches.html
+++ b/matches.html
@@ -16,13 +16,15 @@
             <img src="assets/images/logo.png" alt="شعار الموقع" />
             <h1>مباريات اليوم</h1>
         </div>
-        <button id="menuToggle">...</button>
-<nav id="navMenu">...</nav>
-<div id="mobile-menu">...</div>
-<nav class="nav">
-    <ul>...</ul>
-</nav>
 
+        <!-- زر القائمة للموبايل -->
+        <div class="menu-toggle" id="mobile-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <!-- قائمة التنقل -->
         <nav class="nav">
             <ul>
                 <li><a href="index.html">الرئيسية</a></li>
@@ -30,11 +32,6 @@
                 <li><a href="news.html">الأخبار</a></li>
             </ul>
         </nav>
-        <div class="menu-toggle" id="mobile-menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
     </header>
 
     <!-- محتوى المباريات -->
@@ -51,10 +48,12 @@
         <p>حقوق النشر © 2025 - جميع الحقوق محفوظة</p>
     </footer>
 
+    <!-- زر الصعود للأعلى (اختياري، تأكد من وجود العنصر إن كنت تستعمله في JS) -->
+    <button id="scroll-top" style="display: none;">↑</button>
+
     <!-- سكريبتات الجافاسكربت -->
-<script type="module" src="matches.js"></script>
-<script type="module" src="matches.js"></script>
-<script type="module" src="matches.js"></script>
+    <script type="module" src="assets/js/matches.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 </html>
