--- a/matches.html
+++ b/matches.html
@@ -28,14 +28,16 @@
     <!-- محتوى المباريات -->
     <main>
         <section class="matches-section">
-            <div id="today-matches" class="matches-container">
-                <h2>مباريات اليوم</h2>
-                <!-- المباريات اليوم ستظهر هنا -->
-            </div>
-            <div id="tomorrow-matches" class="matches-container">
-                <h2>مباريات الغد</h2>
-                <!-- المباريات غدًا ستظهر هنا -->
-            </div>
+          <div id="today-matches" class="matches-container">
+    <h2>مباريات اليوم</h2>
+    <div id="today-list"></div>
+</div>
+
+<div id="tomorrow-matches" class="matches-container">
+    <h2>مباريات الغد</h2>
+    <div id="tomorrow-list"></div>
+</div>
+
         </section>
     </main>
 
