--- a/matches.html
+++ b/matches.html
@@ -28,14 +28,11 @@
     <!-- محتوى المباريات -->
     <main>
         <section class="matches-section">
-          <div id="today-matches" class="matches-container">
-    <div id="today-list"></div>
-</div>
-
-<div id="tomorrow-matches" class="matches-container">
-    <div id="tomorrow-list"></div>
-</div>
-
+            <h2>مباريات اليوم</h2>
+            <div id="today-matches" class="matches-list"></div>
+            
+            <h2>مباريات الغد</h2>
+            <div id="tomorrow-matches" class="matches-list"></div>
         </section>
     </main>
 
