--- a/matches.html
+++ b/matches.html
@@ -9,12 +9,10 @@
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-
-    <!-- الهيدر -->
     <header class="header">
         <div class="logo">
             <img src="assets/images/logo.png" alt="شعار الموقع" />
-            <h1>مباريات اليوم</h1>
+            <h1>مباريات كرة القدم</h1>
         </div>
         <nav class="nav">
             <ul>
@@ -25,18 +23,45 @@
         </nav>
     </header>
 
-    <!-- محتوى المباريات -->
-    <main>
-        <section class="matches-section">
-            <h2>مباريات اليوم</h2>
-            <div id="today-matches" class="matches-list"></div>
+    <main class="matches-main">
+        <!-- قسم المباريات المميزة -->
+        <section class="featured-matches">
+            <h2 class="section-title">مبارياتنا المميزة</h2>
+            <div class="matches-slider" id="featured-matches">
+                <!-- سيتم ملؤه بواسطة JavaScript -->
+            </div>
+        </section>
+
+        <!-- قسم جميع المباريات -->
+        <section class="all-matches">
+            <div class="matches-tabs">
+                <button class="tab-btn active" data-tab="today">مباريات اليوم</button>
+                <button class="tab-btn" data-tab="tomorrow">مباريات الغد</button>
+                <button class="tab-btn" data-tab="upcoming">القادمة</button>
+            </div>
             
-            <h2>مباريات الغد</h2>
-            <div id="tomorrow-matches" class="matches-list"></div>
+            <div class="matches-grid">
+                <div class="tab-content active" id="today-matches">
+                    <!-- مباريات اليوم -->
+                </div>
+                <div class="tab-content" id="tomorrow-matches">
+                    <!-- مباريات الغد -->
+                </div>
+                <div class="tab-content" id="upcoming-matches">
+                    <!-- المباريات القادمة -->
+                </div>
+            </div>
+        </section>
+
+        <!-- قسم الأخبار العاجلة -->
+        <section class="breaking-news">
+            <h2 class="section-title">أخبار عاجلة</h2>
+            <div class="news-grid" id="breaking-news">
+                <!-- سيتم ملؤه بواسطة JavaScript -->
+            </div>
         </section>
     </main>
 
-    <!-- الفوتر -->
     <footer class="footer">
         <p>حقوق النشر © 2025 - جميع الحقوق محفوظة</p>
     </footer>
