--- a/news.html
+++ b/news.html
@@ -3,36 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أخبار الرياضة</title>
+    <title>أخبار كرة القدم | Football Matches Tracker</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" href="assets/images/favicon.ico">
+    <link rel="stylesheet" href="assets/css/news.css">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <img src="assets/images/logo.png" alt="شعار الموقع" class="logo">
-        <nav>
-            <a href="index.html">الرئيسية</a>
-            <a href="matches.html">المباريات</a>
-            <a href="news.html" class="active">الأخبار</a>
+    <header class="header">
+        <div class="logo">
+            <img src="assets/images/logo.png" alt="شعار الموقع" />
+            <h1>أخبار كرة القدم</h1>
+        </div>
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">الرئيسية</a></li>
+                <li><a href="matches.html">المباريات</a></li>
+                <li><a href="news.html" class="active">الأخبار</a></li>
+            </ul>
         </nav>
     </header>
 
-    <main>
-        <section class="news-section">
-            <h1>آخر الأخبار الرياضية</h1>
-            <p>سيتم إضافة أخبار قريباً...</p>
+    <main class="news-main">
+        <!-- قسم الأخبار العاجلة -->
+        <section class="breaking-news-section">
+            <div class="section-header">
+                <h2 class="section-title">أخبار عاجلة</h2>
+                <a href="#" class="view-all">عرض الكل</a>
+            </div>
+            <div class="breaking-news-slider" id="breaking-news">
+                <!-- سيتم ملؤه بواسطة JavaScript -->
+            </div>
+        </section>
+
+        <!-- قسم تصنيف الأخبار -->
+        <section class="news-categories">
+            <div class="categories-tabs">
+                <button class="category-btn active" data-category="all">الكل</button>
+                <button class="category-btn" data-category="transfers">انتقالات</button>
+                <button class="category-btn" data-category="injuries">إصابات</button>
+                <button class="category-btn" data-category="analysis">تحليلات</button>
+                <button class="category-btn" data-category="interviews">مقابلات</button>
+            </div>
+        </section>
+
+        <!-- قسم الأخبار الرئيسية -->
+        <section class="main-news-section">
+            <div class="main-news-grid" id="main-news">
+                <!-- سيتم ملؤه بواسطة JavaScript -->
+            </div>
+        </section>
+
+        <!-- قسم الفيديوهات -->
+        <section class="videos-section">
+            <div class="section-header">
+                <h2 class="section-title">آخر الفيديوهات</h2>
+                <a href="#" class="view-all">عرض الكل</a>
+            </div>
+            <div class="videos-grid" id="news-videos">
+                <!-- سيتم ملؤه بواسطة JavaScript -->
+            </div>
+        </section>
+
+        <!-- قسم المقالات المميزة -->
+        <section class="featured-articles">
+            <div class="section-header">
+                <h2 class="section-title">مقالات مميزة</h2>
+                <a href="#" class="view-all">عرض الكل</a>
+            </div>
+            <div class="articles-grid" id="featured-articles">
+                <!-- سيتم ملؤه بواسطة JavaScript -->
+            </div>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 جميع الحقوق محفوظة.</p>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="assets/images/logo.png" alt="شعار الموقع">
+            </div>
+            <div class="footer-links">
+                <a href="#">عن الموقع</a>
+                <a href="#">اتصل بنا</a>
+                <a href="#">شروط الاستخدام</a>
+                <a href="#">سياسة الخصوصية</a>
+            </div>
+            <div class="social-media">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+        <p class="copyright">حقوق النشر © 2025 - جميع الحقوق محفوظة</p>
     </footer>
 
-  <script src="assets/js/api.js" defer></script>
-<script src="assets/js/main.js" defer></script>
-<script src="assets/js/matches.js" defer></script>
-
-
-
+    <!-- Font Awesome للأيقونات -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script type="module" src="assets/js/news.js"></script>
 </body>
 </html>
