--- a/news.html
+++ b/news.html
@@ -34,7 +34,10 @@
                 <!-- سيتم ملؤه بواسطة JavaScript -->
             </div>
         </section>
-
+         <div class="search-bar">
+    <input type="text" id="news-search" placeholder="ابحث في الأخبار...">
+    <button id="search-btn"><i class="fas fa-search"></i></button>
+</div>
         <!-- قسم تصنيف الأخبار -->
         <section class="news-categories">
             <div class="categories-tabs">
