--- a/news.html
+++ b/news.html
@@ -76,6 +76,17 @@
             <div class="articles-grid" id="featured-articles">
                 <!-- سيتم ملؤه بواسطة JavaScript -->
             </div>
+            <!-- داخل <main class="news-main"> -->
+<div id="loading-indicator" class="loader" style="display: none;"></div>
+<div id="error-container" style="display: none;"></div>
+
+<section class="breaking-news-section">
+  <!-- محتوى الأخبار العاجلة -->
+</section>
+
+<section class="main-news-section">
+  <!-- محتوى الأخبار الرئيسية -->
+</section>
         </section>
     </main>
 
