--- a/news.html
+++ b/news.html
@@ -78,20 +78,20 @@
         </section>
         
         <!-- قسم الأخبار الرئيسية -->
-        <section class="main-news-section">
-            <div class="section-header">
-                <h2 class="section-title">
-                    <i class="far fa-newspaper"></i> آخر الأخبار
-                </h2>
-                <div class="sort-options">
-                    <label for="sort-by">
-                        <i class="fas fa-sort"></i> ترتيب حسب:
-                    </label>
-                    <select id="sort-by">
-                        <option value="newest">الأحدث</option>
-                        <option value="oldest">الأقدم</option>
-                        <option value="popular">الأكثر مشاهدة</option>
-                    </select>
+        <section class="sports-news-section">
+    <div class="section-header">
+        <h2 class="section-title">
+            <i class="fas fa-futbol"></i> أخبار الرياضة
+        </h2>
+        <a href="#" class="view-all">عرض الكل <i class="fas fa-arrow-left"></i></a>
+    </div>
+    <div class="sports-news-container" id="sports-news">
+        <!-- سيتم ملؤه بواسطة JavaScript -->
+        <div class="skeleton-loader sports-skeleton"></div>
+        <div class="skeleton-loader sports-skeleton"></div>
+        <div class="skeleton-loader sports-skeleton"></div>
+    </div>
+</section>
                 </div>
             </div>
             <div class="main-news-grid" id="main-news">
