--- a/news.html
+++ b/news.html
@@ -104,19 +104,15 @@
         
         <!-- قسم الفيديوهات -->
         <section class="videos-section">
-            <div class="section-header">
-                <h2 class="section-title">
-                    <i class="fas fa-play-circle"></i> آخر الفيديوهات
-                </h2>
-                <a href="videos.html" class="view-all">عرض الكل <i class="fas fa-arrow-left"></i></a>
-            </div>
-            <div class="videos-grid" id="news-videos">
-                <!-- سيتم ملؤه بواسطة JavaScript -->
-                <div class="skeleton-loader video-skeleton"></div>
-                <div class="skeleton-loader video-skeleton"></div>
-                <div class="skeleton-loader video-skeleton"></div>
-            </div>
-        </section>
+  <div class="section-header">
+    <h2 class="section-title">
+      <i class="fas fa-play-circle"></i> آخر الفيديوهات
+    </h2>
+  </div>
+  <div class="videos-grid" id="news-videos">
+    <!-- سيتم تعبئتها بواسطة JavaScript -->
+  </div>
+</section>
     </main>
 
     <!-- الفوتر -->
