--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>مباريات مباشرة | Football Matches Tracker</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/matches.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
