--- a/matches.html
+++ b/matches.html
@@ -73,7 +73,7 @@
     <footer class="footer">
         <p>حقوق النشر © 2025 - جميع الحقوق محفوظة</p>
     </footer>
-
+<script type="module" src="assets/js/matches-news.js"></script>
     <script type="module" src="assets/js/matches.js"></script>
 </body>
 </html>
