--- a/matches.html
+++ b/matches.html
@@ -62,7 +62,7 @@
         </h2>
         <a href="news.html" class="view-all">عرض الكل <i class="fas fa-arrow-left"></i></a>
     </div>
-    <div class="important-news-container" id="important-news">
+    <div class="importantnewscontainer" id="important-news">
         <!-- سيتم تعبئتها بواسطة JavaScript -->
         <div class="skeleton-loader news-skeleton"></div>
         <div class="skeleton-loader news-skeleton"></div>
