--- a/matches.html
+++ b/matches.html
@@ -55,19 +55,20 @@
         </section>
 
         <!-- قسم الأخبار العاجلة -->
-       <section class="important-news-section">
+      <section class="important-news-section">
     <div class="section-header">
         <h2 class="section-title">
             <i class="fas fa-star"></i> أخبار مهمة
         </h2>
         <a href="news.html" class="view-all">عرض الكل <i class="fas fa-arrow-left"></i></a>
     </div>
-    <div class="importantnewscontainer" id="important-news">
+    <div class="important-news-container" id="important-news">
         <!-- سيتم تعبئتها بواسطة JavaScript -->
         <div class="skeleton-loader news-skeleton"></div>
         <div class="skeleton-loader news-skeleton"></div>
     </div>
 </section>
+
     </main>
 
     <footer class="footer">
