--- a/news.html
+++ b/news.html
@@ -10,6 +10,8 @@
 
   <header>
     <h1>أحدث أخبار الرياضة</h1>
+    <button onclick="document.body.classList.toggle('dark-mode')">🌙 الوضع الداكن</button>
+
   </header>
 
   <!-- البحث -->
