--- a/news.html
+++ b/news.html
@@ -1,105 +1,59 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>أخبار الرياضة</title>
-  <link rel="stylesheet" href="assets/css/news.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>أخبار رياضية</title>
+  <link rel="stylesheet" href="../assets/css/news.css">
+  <link rel="icon" href="../assets/images/icon.png">
 </head>
 <body>
-
   <header>
-    <h1>أحدث أخبار الرياضة</h1>
-    <button onclick="document.body.classList.toggle('dark-mode')">🌙 الوضع الداكن</button>
-
+    <div class="container header-container">
+      <div class="logo">مباريات اليوم</div>
+      <nav>
+        <ul>
+          <li><a href="index.html">الرئيسية</a></li>
+          <li><a href="matches.html">المباريات</a></li>
+          <li><a href="news.html" class="active">الأخبار</a></li>
+        </ul>
+      </nav>
+      <div class="search-box">
+        <input type="text" id="news-search" placeholder="ابحث عن خبر...">
+        <button id="search-btn">🔍</button>
+      </div>
+    </div>
   </header>
 
-  <!-- البحث -->
-  <section class="search-section">
-    <input type="text" id="news-search" placeholder="ابحث عن خبر...">
-    <button id="search-btn">بحث</button>
-  </section>
+  <main class="container">
+    <section id="breaking-news-section">
+      <h2>الأخبار العاجلة</h2>
+      <div id="breaking-news" class="news-grid"></div>
+    </section>
 
-  <!-- التصنيفات -->
-  <section class="categories">
-    <button class="category-btn" data-category="all">الكل</button>
-    <button class="category-btn" data-category="sports">رياضة</button>
-  </section>
+    <section>
+      <h2>أخبار رياضية عالمية</h2>
+      <div id="sports-news-global" class="news-grid"></div>
+    </section>
 
-  <!-- الأخبار العاجلة -->
-  <section class="breaking-section">
-    <h2>الأخبار العاجلة</h2>
-    <div id="breaking-news" class="breaking-container"></div>
-  </section>
+    <section>
+      <h2>أخبار الرياضة المغربية</h2>
+      <div id="sports-news-morocco" class="news-grid"></div>
+    </section>
 
-  <!-- الأخبار الرياضية -->
-  <section class="news-section">
-    <h2>أخبار رياضية</h2>
-    <div id="sports-news" class="news-container"></div>
-    <button id="load-more">تحميل المزيد</button>
-  </section>
+    <section>
+      <h2>أخبار الرياضة الأفريقية</h2>
+      <div id="sports-news-africa" class="news-grid"></div>
+    </section>
 
-  <!-- مؤشر التحميل -->
-  <div id="loading" style="display:none;">جارٍ التحميل...</div>
+    <div class="center">
+      <button id="load-more">تحميل المزيد</button>
+    </div>
 
-  <!-- رسائل الخطأ -->
-  <div id="error-container"></div>
+    <div id="loading" class="loading">جاري التحميل...</div>
+    <div id="error-container"></div>
+  </main>
 
-  <script src="assets/js/news.js"></script>
-
-
-    <!-- الفوتر -->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <img src="assets/images/logo-white.png" alt="شعار الموقع">
-                <p>نقدم لكم آخر أخبار كرة القدم العربية والعالمية</p>
-            </div>
-            <div class="footer-links">
-                <div class="links-column">
-                    <h3>روابط سريعة</h3>
-                    <a href="index.html"><i class="fas fa-home"></i> الرئيسية</a>
-                    <a href="matches.html"><i class="fas fa-calendar-alt"></i> المباريات</a>
-                    <a href="news.html"><i class="far fa-newspaper"></i> الأخبار</a>
-                    <a href="about.html"><i class="fas fa-info-circle"></i> عن الموقع</a>
-                </div>
-                <div class="links-column">
-                    <h3>البطولات</h3>
-                    <a href="#"><i class="fas fa-trophy"></i> الدوري الإنجليزي</a>
-                    <a href="#"><i class="fas fa-trophy"></i> الدوري الإسباني</a>
-                    <a href="#"><i class="fas fa-trophy"></i> دوري الأبطال</a>
-                    <a href="#"><i class="fas fa-trophy"></i> كأس العالم</a>
-                </div>
-                <div class="links-column">
-                    <h3>اتصل بنا</h3>
-                    <a href="contact.html"><i class="fas fa-envelope"></i> نموذج الاتصال</a>
-                    <a href="#"><i class="fas fa-comment-alt"></i> الشكاوى والمقترحات</a>
-                    <a href="#"><i class="fas fa-ad"></i> الإعلان على الموقع</a>
-                </div>
-            </div>
-            <div class="social-media">
-                <h3>تابعنا على</h3>
-                <div class="social-icons">
-                    <a href="#" aria-label="فيسبوك"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="تويتر"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="إنستجرام"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="يوتيوب"><i class="fab fa-youtube"></i></a>
-                    <a href="#" aria-label="تليجرام"><i class="fab fa-telegram"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="copyright">
-            <p>حقوق النشر © <span id="current-year"></span> - جميع الحقوق محفوظة</p>
-            <div class="legal-links">
-                <a href="#"><i class="fas fa-file-contract"></i> شروط الاستخدام</a>
-                <a href="#"><i class="fas fa-lock"></i> سياسة الخصوصية</a>
-            </div>
-        </div>
-    </footer>
-
-    <!-- السكريبتات -->
-    <script type="module" src="assets/js/news-api.js"></script>
-    <script type="module" src="assets/js/news.js"></script>
-    
+  <script src="../assets/js/news.js"></script>
 </body>
 </html>
