--- a/news.html
+++ b/news.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>أخبار رياضية</title>
-  <link rel="stylesheet" href="../assets/css/news.css">
-  <link rel="icon" href="../assets/images/icon.png">
+  <link rel="stylesheet" href="assets/css/news.css">
+  <link rel="icon" href="assets/images/icon.png">
 </head>
 <body>
   <header>
@@ -54,6 +54,6 @@
     <div id="error-container"></div>
   </main>
 
-  <script src="../assets/js/news.js"></script>
+  <script src="assets/js/news.js"></script>
 </body>
 </html>
