--- a/news.html
+++ b/news.html
@@ -50,12 +50,9 @@
                 </h2>
                 <a href="#" class="view-all">عرض الكل <i class="fas fa-arrow-left"></i></a>
             </div>
-            <div class="breaking-news-slider" id="breaking-news">
-                <!-- سيتم ملؤه بواسطة JavaScript -->
-                <div class="skeleton-loader breaking-skeleton"></div>
-                <div class="skeleton-loader breaking-skeleton"></div>
-                <div class="skeleton-loader breaking-skeleton"></div>
-            </div>
+           <div class="breaking-news-slider" id="breaking-news">
+  <!-- سيتم ملؤه تلقائيًا من JavaScript -->
+</div>
         </section>
         
         <!-- شريط البحث والتصنيفات -->
