--- a/news.html
+++ b/news.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>أخبار الرياضة</title>
-  <link rel="stylesheet" href="news.css" />
+ <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/news.css">
+    <link rel="stylesheet" href="assets/css/footer.css"> 
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
