--- a/news.html
+++ b/news.html
@@ -52,6 +52,6 @@
     <p>&copy; 2025 موقع أخبار الرياضة. جميع الحقوق محفوظة.</p>
   </footer>
 
-  <script src="news.js"></script>
+    <script type="module" src="assets/js/news.js"></script>
 </body>
 </html>
