--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@
       </div>
     </header>
 
-    <div id="loading" class="loading" style="display: none;">جاري التحميل...</div>
+<button id="load-more" class="load-more-btn">تحميل المزيد</button>
     <div id="error-container" class="error"></div>
 
     <section id="breaking-news"></section>
