--- a/news.html
+++ b/news.html
@@ -18,7 +18,9 @@
         <button id="search-button">🔍 بحث</button>
       </div>
     </header>
-
+<div id="loading" style="display: none; text-align: center; padding: 1rem; color: white;">
+  جارٍ تحميل الأخبار...
+</div>
 <button id="load-more" class="load-more-btn">تحميل المزيد</button>
     <div id="error-container" class="error"></div>
 
