--- a/news.html
+++ b/news.html
@@ -22,6 +22,8 @@
       </ul>
     </nav>
   </header>
+<div id="loading" style="display: none;">جاري التحميل...</div>
+<div id="error-container"></div>
 
   <main>
     <section id="breaking-news">
