--- a/news.html
+++ b/news.html
@@ -1,57 +1,138 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>أخبار الرياضة</title>
- <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/news.css">
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>أخبار كرة القدم | Football News</title>
+  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/news.css">
+  <link rel="stylesheet" href="assets/css/footer.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <header>
-    <div class="logo-container">
-      <img src="logo.png" alt="شعار الموقع" id="logo">
+  <!-- الهيدر -->
+  <header class="header">
+    <div class="logo">
+      <img src="assets/images/logo.png" alt="شعار الموقع">
+      <h1>أخبار كرة القدم</h1>
     </div>
-    <nav>
+    <nav class="nav">
       <ul>
-        <li><a href="#">الصفحة الرئيسية</a></li>
-        <li><a href="#">مباريات اليوم</a></li>
-        <li><a href="#">القنوات الرياضية</a></li>
+        <li><a href="index.html">الرئيسية</a></li>
+        <li><a href="matches.html">المباريات</a></li>
+        <li><a href="news.html" class="active">الأخبار</a></li>
+        <li><a href="videos.html">الفيديوهات</a></li>
       </ul>
     </nav>
+    <div class="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
   </header>
-<div id="loading" style="display: none;">جاري التحميل...</div>
-<div id="error-container"></div>
 
-  <main>
-    <section id="breaking-news">
-      <h2>أخبار عاجلة</h2>
-      <div class="news-container">
-        <!-- سيتم عرض الأخبار هنا -->
+  <!-- المحتوى الرئيسي -->
+  <main class="news-main">
+    <!-- مؤشر التحميل -->
+    <div id="loading" class="loading-indicator" style="display: none;">
+      <div class="loader"></div>
+      <p>جاري تحميل الأخبار...</p>
+    </div>
+
+    <!-- عرض الأخطاء -->
+    <div id="error-container"></div>
+
+    <!-- قسم الأخبار العاجلة -->
+    <section class="breaking-news-section">
+      <div class="section-header">
+        <h2 class="section-title">
+          <i class="fas fa-bolt"></i> أخبار عاجلة
+        </h2>
+        <a href="#" class="view-all">عرض الكل <i class="fas fa-arrow-left"></i></a>
+      </div>
+      <div id="breaking-news" class="breaking-news-slider">
+        <!-- تُملأ أوتوماتيكياً من JavaScript -->
       </div>
     </section>
 
-    <section id="transfers">
-      <h2>أخبار الانتقالات</h2>
-      <div class="news-container">
-        <!-- سيتم عرض أخبار الانتقالات هنا -->
+    <!-- شريط البحث والتصنيفات -->
+    <section class="search-section">
+      <div class="search-container">
+        <input type="text" id="news-search" placeholder="ابحث في الأخبار...">
+        <button id="search-btn" aria-label="بحث">
+          <i class="fas fa-search"></i>
+        </button>
+      </div>
+      <div class="categories-tabs">
+        <button class="category-btn active" data-category="all">
+          <i class="fas fa-newspaper"></i> الكل
+        </button>
+        <button class="category-btn" data-category="transfers">
+          <i class="fas fa-exchange-alt"></i> انتقالات
+        </button>
+        <button class="category-btn" data-category="matches">
+          <i class="fas fa-futbol"></i> مباريات
+        </button>
+        <button class="category-btn" data-category="injuries">
+          <i class="fas fa-user-injured"></i> إصابات
+        </button>
       </div>
     </section>
 
-    <section id="general-football-news">
-      <h2>أخبار كرة القدم العامة</h2>
-      <div class="news-container">
-        <!-- سيتم عرض الأخبار العامة هنا -->
+    <!-- قسم الأخبار الرياضية -->
+    <section class="sports-news-section">
+      <div class="section-header">
+        <h2 class="section-title">
+          <i class="fas fa-futbol"></i> أخبار الرياضة
+        </h2>
+        <a href="#" class="view-all">عرض الكل <i class="fas fa-arrow-left"></i></a>
+      </div>
+      <div id="sports-news" class="sports-news-container">
+        <!-- تُملأ أوتوماتيكياً من JavaScript -->
+        <div class="skeleton-loader sports-skeleton"></div>
+        <div class="skeleton-loader sports-skeleton"></div>
+        <div class="skeleton-loader sports-skeleton"></div>
+      </div>
+      <button id="load-more" class="load-more-btn">
+        <i class="fas fa-plus"></i> تحميل المزيد
+      </button>
+    </section>
+
+    <!-- قسم الفيديوهات (مكان للمستقبل) -->
+    <section class="videos-section">
+      <div class="section-header">
+        <h2 class="section-title">
+          <i class="fas fa-play-circle"></i> آخر الفيديوهات
+        </h2>
+      </div>
+      <div class="videos-grid" id="news-videos">
+        <!-- يمكن تعبئتها لاحقاً -->
       </div>
     </section>
   </main>
 
-  <footer>
-    <p>حقوق النشر © 2025</p>
+  <!-- الفوتر -->
+  <footer class="footer">
+    <!-- محتوى الفوتر كما كان سابقاً -->
+    <div class="footer-content">
+      <!-- ... -->
+    </div>
+    <div class="copyright">
+      <p>حقوق النشر © <span id="current-year"></span> - جميع الحقوق محفوظة</p>
+      <div class="legal-links">
+        <!-- ... -->
+      </div>
+    </div>
   </footer>
 
-
-    <script type="module" src="assets/js/news.js"></script>
+  <!-- السكريبتات -->
+  <script>
+    // سنة حقوق النشر التلقائية
+    document.getElementById('current-year').textContent = new Date().getFullYear();
+    // زر القائمة المتنقلة
+    document.querySelector('.menu-toggle').addEventListener('click', () => {
+      document.querySelector('.nav').classList.toggle('active');
+    });
+  </script>
+  <script type="module" src="assets/js/news.js"></script>
 </body>
 </html>
