--- a/news.html
+++ b/news.html
@@ -177,6 +177,7 @@ document.addEventListener('DOMContentLoaded', function() {
     });
   });
 });
+</script>
   <script type="module" src="assets/js/news.js"></script>
 </body>
 </html>
