--- a/news.html
+++ b/news.html
@@ -133,6 +133,7 @@
       document.querySelector('.nav').classList.toggle('active');
     });
   </script>
+  <script>
   // التحكم في الأخبار العاجلة
 document.addEventListener('DOMContentLoaded', function() {
   const newsItems = document.getElementById('breakingNewsItems');
