--- a/news.html
+++ b/news.html
@@ -46,9 +46,8 @@
         <h2 class="section-title">
           <i class="fas fa-bolt"></i> أخبار عاجلة
         </h2>
-        <a href="#" class="view-all">عرض الكل <i class="fas fa-arrow-left"></i></a>
       </div>
-      <div id="breaking-news" class="breaking-news-container">
+      <div id="breaking-news" class="breaking-news-grid">
         <!-- سيتم تعبئتها بواسطة JavaScript -->
       </div>
     </section>
