--- a/news.html
+++ b/news.html
@@ -95,24 +95,21 @@
 
   <!-- الفوتر -->
   <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-section">
-        <h3>عن الموقع</h3>
-        <p>أول موقع متخصص في أخبار كرة القدم العربية والعالمية</p>
-      </div>
-      <div class="footer-section">
-        <h3>روابط سريعة</h3>
-        <ul>
-          <li><a href="index.html">الرئيسية</a></li>
-          <li><a href="matches.html">المباريات</a></li>
-          <li><a href="news.html">الأخبار</a></li>
-        </ul>
-      </div>
+  <div class="footer-content">
+    <div class="footer-logo">
+      <span class="logo-text">Foot TV</span>
     </div>
-    <div class="copyright">
-      <p>حقوق النشر © <span id="current-year"></span> - جميع الحقوق محفوظة</p>
+    <div class="footer-links">
+      <a href="index.html"><i class="fas fa-home"></i> الرئيسية</a>
+      <a href="news.html"><i class="fas fa-newspaper"></i> الأخبار</a>
+      <a href="matches.html"><i class="fas fa-futbol"></i> المباريات</a>
+      <a href="videos.html"><i class="fas fa-video"></i> الفيديوهات</a>
     </div>
-  </footer>
+  </div>
+  <div class="copyright">
+    <p>حقوق النشر © <span id="current-year"></span> Foot TV - جميع الحقوق محفوظة</p>
+  </div>
+</footer>
 
   <script src="assets/js/news.js"></script>
 </body>
