--- a/news.html
+++ b/news.html
@@ -98,7 +98,9 @@
   <footer class="footer">
   <div class="footer-content">
     <div class="footer-logo">
-      <span class="logo-text">Foot TV</span>
+     <li><a href="index.html"> 
+       <span class="logo-text">Foot TV</span></li>
+      
     </div>
     <div class="footer-links">
       <a href="index.html"><i class="fas fa-home"></i> الرئيسية</a>
