--- a/news.html
+++ b/news.html
@@ -98,8 +98,8 @@
   <footer class="footer">
   <div class="footer-content">
     <div class="footer-logo">
-     <li><a href="index.html"> 
-       <span class="logo-text">Foot TV</span></li>
+     <a href="index.html"> 
+       <span class="logo-text">Foot TV</span>
       
     </div>
     <div class="footer-links">
