--- a/news.html
+++ b/news.html
@@ -99,7 +99,7 @@
   <div class="footer-content">
     <div class="footer-logo">
      <a href="index.html"> 
-       <span class="logo-text">Foot TV</span>
+       <span class="logo-text">Foot TV</span></a>
       
     </div>
     <div class="footer-links">
