--- a/news.html
+++ b/news.html
@@ -95,11 +95,10 @@
   </main>
 
   <!-- الفوتر -->
-  <footer class="footer">
-  <div class="footer-content">
-    <div class="footer-logo">
-     <a href="index.html"> 
-       <span class="logo-text">Foot TV</span></a>
+ <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="#top-of-page" class="logo-text">Foot TV</a>
       
     </div>
     <div class="footer-links">
