--- a/news.html
+++ b/news.html
@@ -112,7 +112,17 @@
     <p>حقوق النشر © <span id="current-year"></span> Foot TV - جميع الحقوق محفوظة</p>
   </div>
 </footer>
-
+// جعل الحركة سلسة عند النقر على اللوغو
+  <script>
+document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+  anchor.addEventListener('click', function(e) {
+    e.preventDefault();
+    document.querySelector(this.getAttribute('href')).scrollIntoView({
+      behavior: 'smooth'
+    });
+  });
+});
+  </scrippt>
   <script src="assets/js/news.js"></script>
 </body>
 </html>
