--- a/news.html
+++ b/news.html
@@ -122,7 +122,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     });
   });
 });
-  </scrippt>
+  </script>
   <script src="assets/js/news.js"></script>
 </body>
 </html>
